--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    
+    <audio src="tick.mp3" autoplay loop></audio>
 <div class="clock">
 <div class="hand hour" data-hour-hand></div>
 <div class="hand minute" data-minute-hand></div>
